--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
                             <div class="story-text equalheight">
                                 <h3> in 1935 </h3>
                                 <span>The company chose the dome of Dammam to be the headquarters of the drilling</span>
-                                <p class="top20 bottom20"> Where the drilling of 10 wells, but the results are disappointing, and the company close to leave after five years frustrating in Saudi Arabia</p>
+                                <p class="top20 bottom20">The company drilled 10 wells, but the results were disappointing, and the company chose to leave after five years of frustration in Saudi Arabia</p>
 
                             </div>
                         </div>
@@ -77,7 +77,7 @@
                             <div class="story-text equalheight">
                                 <h3>March 4, 1938</h3>
                                 <span>Contiue drilling well No.7</span>
-                                <p class="top20 bottom20">any results, one of the American geologists known as "Stanki" did not lose hope, and continued drilling in Well No. 7 and next to the Saudi directory Ben Ramthan.
+                                <p class="top20 bottom20">At fist there was no results , but one of the American geologists known as "Stanki" did not lose hope, and continued drilling in Well No. 7.
 
 As the equipment continued to drill at the famous Well No. 7 of unprecedented levels, and on the morning of March 4, 1938, it was a good morning for the country, where the oil flowed from the well in commercial quantities</p>
 
@@ -115,9 +115,9 @@ As the equipment continued to drill at the famous Well No. 7 of unprecedented le
                                 <img alt="image" src="images/our-story5.jpg">
                             </div>
                             <div class="story-text equalheight">
-                                <h3>80 years History</h3>
+                                <h3>80 Years History</h3>
                                 <span>From the dicovery of well No.7</span>
-                                <p class="top20 bottom20">has made the oil giant Aramco one of the largest companies in the world, through the production and pumping of more than 10 million barrels per day, and the management of more than 260 billion barrels of crude oil, 284 trillion standard cubic feet</p>
+                                <p class="top20 bottom20">This well made the oil giant Aramco one of the largest companies in the world, through the production and pumping of more than 10 million barrels per day, and the management of more than 260 billion barrels of crude oil, 284 trillion standard cubic feet</p>
 
                             </div>
                         </div>
@@ -128,13 +128,12 @@ As the equipment continued to drill at the famous Well No. 7 of unprecedented le
                                 <img alt="image" src="images/our-story6.jpg">
                             </div>
                             <div class="story-text equalheight">
-                                <h3>Six Name Pic 6</h3>
-                                <span>Subtitle#6</span>
-                                <p class="top20 bottom20">The company was able to discover 116 oil fields, in conjunction with the pumping of oil with a commercial quantity of well 7, about 80 years ago, and was the last oil fields discovered "Asadif" gas field "Umm Rumail and feeling."
+                                <h3>Today</h3>
+                                <span>Achivements</span>
+                                <p class="top20 bottom20">The company was able to discover 116 oil fields, in conjunction with the pumping of oil with a commercial quantity of well 7.The company dicoverd
+Ghawar which is one of the largest oilfields in the world, along with the Safaniya field and other big oil fields in Saudi Arabia.
 
-Ghawar is one of the largest oilfields in the world, along with the Safaniya field and other big oil fields in Saudi Arabia.
-
-After 45 years of oil flow from Well 7, specifically in 1982, the Dammam field was suspended for operational reasons, but it is able to produce oil agai</p>
+After 45 years of oil flow from Well 7, specifically in 1982, the Dammam field was suspended for operational reasons, but it is able to produce oil again</p>
 
                             </div>
                         </div>
@@ -161,7 +160,7 @@ After 45 years of oil flow from Well 7, specifically in 1982, the Dammam field w
                 <div class="intro-text center bottom15">
                     <span class="heading-title bottom25 altcolor">Famous Oil Fields</span>
                     <h2 class="whitecolor bottom45">These Oil Fields have Decades in Their History & Supply.</h2>
-                    <p class="bottom45 whitecolor">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+                    <p class="bottom45 whitecolor"> According to the data found these are the top oil fields in terms of their production,each of them has it's own features that diffretiate the type of oil produced from the field</p>
                 </div>
             </div>
             <div class="col-md-2 col-sm-1"></div>
@@ -173,8 +172,8 @@ After 45 years of oil flow from Well 7, specifically in 1982, the Dammam field w
                     <img alt="image" src="images/oilfield-ghawar.jpg">
                     <div class="cell">
                         <h4 class="darkcolor bottom10"><strong>Ghawar</strong> Oil Field</h4>
-                        <p class="bottom25">When Google announced they were joining the web font game with Google Fonts, it was a game changer.</p>
-                        <a href="#" class="button default">Read More</a>
+                        <p class="bottom25">Location: Al-Ahsa, Eastern Province.This Oilfield is started Production in 1951 and produces 5,000,000 barrels per day of oil and 2 billion cubic feet of gas per day, estimated 71,000 million barrels of oil reserved.This is the largest Conventional Oilfield in the World, is Subdivided into five Production Areas.</p>
+                        <a href="https://www.worldlistmania.com/list-of-oil-fields-in-saudi-arabia/" class="button default">Read More</a>
                     </div>
                 </div>
             </div>
@@ -184,8 +183,9 @@ After 45 years of oil flow from Well 7, specifically in 1982, the Dammam field w
                     <img alt="image" src="images/oilfield-safaniya.jpg">
                     <div class="cell">
                         <h4 class="darkcolor bottom10"><strong>Safaniya</strong> Oil Field</h4>
-                        <p class="bottom25">When Google announced they were joining the web font game with Google Fonts, it was a game changer.</p>
-                        <a href="#" class="button default">Read More</a>
+                        <p class="bottom25">Star of Production: 1957,Current Production of Oil: 1,200,000 barrels per day,
+Estimated Oil Reserve: 37,000 million barrels.It is located about 265 km north of the Dhahran, covered 50 by 15 kilometers, is the largest offshore oil field in the world.</p>
+                        <a href="https://www.worldlistmania.com/list-of-oil-fields-in-saudi-arabia/" class="button default">Read More</a>
                     </div>
                 </div>
             </div>
@@ -195,8 +195,10 @@ After 45 years of oil flow from Well 7, specifically in 1982, the Dammam field w
                     <img alt="image" src="images/oilfield-shaybah.jpg">
                     <div class="cell">
                         <h4 class="darkcolor bottom10"><strong>Shaybah</strong> Oil Field</h4>
-                        <p class="bottom25">When Google announced they were joining the web font game with Google Fonts, it was a game changer.</p>
-                        <a href="#" class="button default">Read More</a>
+                        <p class="bottom25">Start of Production: 1998
+Production of oil: 1,000,000 barrels per day,Estimated oil Reserve: 14,000 million barrels
+,Estimated gas Reserve: 710×109 m3.It is Onshore Oil field located in the northern edge of Rub’ Al Khali desert..</p>
+                        <a href="http://www.saudiaramco.com/en/home/our-business/upstream/oil-production.html" class="button default">Read More</a>
                     </div>
                 </div>
             </div>
@@ -206,8 +208,8 @@ After 45 years of oil flow from Well 7, specifically in 1982, the Dammam field w
                     <img alt="image" src="images/oilfield-khurais.jpg">
                     <div class="cell">
                         <h4 class="darkcolor bottom10"><strong>Khurais</strong> Oil Field</h4>
-                        <p class="bottom25">When Google announced they were joining the web font game with Google Fonts, it was a game changer.</p>
-                        <a href="#" class="button default">Read More</a>
+                        <p class="bottom25">Star of Production: 1957 , Current Production of Oil: 1,200,000 barrels per day ,Estimated Oil Reserve: 37,000 million barrels.It is located about 265 km north of the Dhahran, covered 50 by 15 kilometers, is the largest offshore oil field in the world..</p>
+                        <a href="http://www.saudiaramco.com/en/home/our-business/upstream/oil-production.html" class="button default">Read More</a>
                     </div>
                 </div>
             </div>
@@ -229,7 +231,7 @@ After 45 years of oil flow from Well 7, specifically in 1982, the Dammam field w
                 <div class="intro-text center bottom15">
                     <span class="heading-title bottom25">Charts & Graphs</span>
                     <h2 class="darkcolor bottom45">Crude Oil Market Analysis.</h2>
-                    <p class="bottom45">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam.</p>
+                    <p class="bottom45"> Saudi Arabia has the high amount of oil production and reserves and the peak amount was in 2017 .</p>
                 </div>
             </div>
             <div class="col-md-2 col-sm-1"></div>
@@ -280,7 +282,7 @@ After 45 years of oil flow from Well 7, specifically in 1982, the Dammam field w
                 <div class="intro-text center bottom15">
                     <span class="heading-title bottom25">Saudi Oil Figures</span>
                     <h2 class="darkcolor bottom25">Impact on the Saudi Economy</h2>
-                    <p class="bottom45 darkcolor">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam</p>
+                    <p class="bottom45 darkcolor"></p>
                 </div>
             </div>
             <div class="col-md-2 col-sm-1"></div>
@@ -289,13 +291,13 @@ After 45 years of oil flow from Well 7, specifically in 1982, the Dammam field w
             <div class="col-md-3 col-sm-6 col-xs-6">
                 <div class="counter-center ">
 
-                       <!-- <i class="ion-soup-can" style="font-size: 12em;"></i> -->
+
                         <div class="counters">
-                            <span class="count_nums">100 </span>
+                            <span class="count_nums">10.2 </span>
                         </div>
 
-                    <h6 class="text-uppercase bottom25">Billion Barrels </h6>
-                    <p>Saudi Oil</p>
+                    <h6 class="text-uppercase bottom25">million Barrels per Day </h6>
+                    <p>Amount of oil produced according to ARAMCO</p>
                 </div>
             </div>
             <div class="col-md-3 col-sm-6 col-xs-6">
@@ -303,22 +305,22 @@ After 45 years of oil flow from Well 7, specifically in 1982, the Dammam field w
 
                        <!-- <i class="ion-map"></i> -->
                         <div class="counters">
-                            <span class="count_nums" >200 </span>
+                            <span class="count_nums" >261.1 </span>
                         </div>
 
-                    <h6 class="text-uppercase bottom25">Thousand Oil Fields </h6>
-                    <p>According to ARAMCO, . </p>
+                    <h6 class="text-uppercase bottom25">Billion Barrels </h6>
+                    <p>According to ARAMCO,this is the amount cude and condensate oil reserves found. </p>
                 </div>
             </div>
             <div class="col-md-3 col-sm-6 col-xs-6">
                 <div class="counter-center center">
                        <!-- <i class="ion-social-usd"></i> -->
                         <div class="counters">
-                            <span class="count_nums">500 </span>
+                            <span class="count_nums">7.1</span>
                         </div>
 
-                    <h6 class="text-uppercase bottom25">Billion Dollars </h6>
-                    <p>Revenue Generated From Oil on a yearly basis. </p>
+                    <h6 class="text-uppercase bottom25">Million Barrels per Day </h6>
+                    <p>Oil exported ousite the country acooding to ARAMCO. </p>
                 </div>
             </div>
             <div class="col-md-3 col-sm-6 col-xs-6">
@@ -326,11 +328,11 @@ After 45 years of oil flow from Well 7, specifically in 1982, the Dammam field w
 
                        <!-- <i class="ion-android-contacts"></i> -->
                         <div class="counters">
-                            <span class="count_nums">400</span>
+                            <span class="count_nums">440</span>
                         </div>
 
-                    <h6 class="text-uppercase bottom25">Percent Saudi </h6>
-                    <p> </p>
+                    <h6 class="text-uppercase bottom25">Billion Saudi Riyals </h6>
+                    <p>Revenue generated from Oil, According to the Ministry of Finanace</p>
                 </div>
             </div>
         </div>
@@ -354,17 +356,19 @@ After 45 years of oil flow from Well 7, specifically in 1982, the Dammam field w
                 <div class="panel-heading" >
                   <h4 class="panel-title">
                     <!-- <a role="button" data-toggle="collapse" data-parent="#accordion" href="#collapseOne" aria-expanded="false" aria-controls="collapseOne" class="collapsed"> -->
-                      First Fact For Oil
+                       Fact about Oil reserves
                     <!-- </a> -->
                   </h4>
                 </div>
                 <!-- <div id="collapseOne" class="panel-collapse collapse" role="tabpanel" aria-labelledby="headingOne" aria-expanded="false" style="height: 0px;"> -->
                   <div class="panel-body">
-                  <ul>
+
+                    <p>The Kingdom's Ghawar oil field has enough reserves to fill 4,770,897 Olympic swimming pools. Source: US Energy Information Administration.</p>
+                  <!-- <ul>
                       <li>Lorem ipsum dolor sit amet, consectetur adipiscing elit</li>
                       <li>Sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</li>
                       <li>Ut enim ad minim veniam</li>
-                  </ul>
+                  </ul> -->
                 </div>
                 <!-- </div> -->
               <!-- </div> -->
@@ -372,13 +376,13 @@ After 45 years of oil flow from Well 7, specifically in 1982, the Dammam field w
                 <!-- <div class="panel-heading" role="tab" id="headingTwo"> -->
                   <h4 class="panel-title">
                     <!-- <a class="collapsed" role="button" data-toggle="collapse" data-parent="#accordion" href="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo"> -->
-                       Second fact For Oil #2
+                       When did the Marketreached it's peak?
                     <!-- </a> -->
                   </h4>
                 <!-- </div> -->
                 <!-- <div id="collapseTwo" class="panel-collapse collapse" role="tabpanel" aria-labelledby="headingTwo" aria-expanded="false" style="height: 0px;"> -->
                   <div class="panel-body">
-                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim  ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam</p>
+                    <p>In April 2015, the Saudi oil minister Ali Al-Naimi said that Saudi Arabia produced 12,630,000 million barrels per day in March that year, which was the highest figure based on records since the early 1980s. The previous peak was in August 2013 at 12,730,000 million barrels per day.</p>
                   </div>
                 <!-- </div> -->
               <!-- </div> -->
@@ -386,12 +390,15 @@ After 45 years of oil flow from Well 7, specifically in 1982, the Dammam field w
                 <!-- <div class="panel-heading" role="tab" id="headingThree"> -->
                   <h4 class="panel-title">
                     <!-- <a class="collapsed" role="button" data-toggle="collapse" data-parent="#accordion" href="#collapseThree" aria-expanded="false" aria-controls="collapseThree"> -->
-                      Third FAQ For Oil #3, It's a Longer Title
+                      World largest exported !
                     <!-- </a> -->
                   </h4>
                 <!-- </div> -->
                 <!-- <div id="collapseThree" class="panel-collapse collapse" role="tabpanel" aria-labelledby="headingThree" aria-expanded="false" style="height: 0px;"> -->
-                  <div class="panel-body">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam
+                  <div class="panel-body">
+
+               <p>Naimi said that oil production in Saudi Arabia, the world’s biggest crude exporter, was “around 10 million” bpd in April.</p>
+
                   </div>
                 <!-- </div> -->
               <!-- </div> -->
