--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 <title>Oil Fields and Production in Saudi Arabia</title>
 <!-- main styling file  -->
 <link rel="stylesheet" href="css/style.css">
-<link rel="shortcut icon" href="images/favicon.ico">
+
 
 </head>
 <body data-spy="scroll" data-target=".scrolly" data-offset="50">
@@ -231,7 +231,7 @@ Production of oil: 1,000,000 barrels per day,Estimated oil Reserve: 14,000 milli
                 <div class="intro-text center bottom15">
                     <span class="heading-title bottom25">Charts & Graphs</span>
                     <h2 class="darkcolor bottom45">Crude Oil Market Analysis.</h2>
-                    <p class="bottom45"> Saudi Arabia has the high amount of oil production and reserves and the peak amount was in 2017 .</p>
+                    <p class="bottom45"> Saudi Arabia has high amount of oil production and reserves and the peak amount was in 2017 .</p>
                 </div>
             </div>
             <div class="col-md-2 col-sm-1"></div>
@@ -303,7 +303,7 @@ Production of oil: 1,000,000 barrels per day,Estimated oil Reserve: 14,000 milli
             <div class="col-md-3 col-sm-6 col-xs-6">
                 <div class="counter-center center">
 
-                       <!-- <i class="ion-map"></i> -->
+
                         <div class="counters">
                             <span class="count_nums" >261.1 </span>
                         </div>
@@ -314,7 +314,7 @@ Production of oil: 1,000,000 barrels per day,Estimated oil Reserve: 14,000 milli
             </div>
             <div class="col-md-3 col-sm-6 col-xs-6">
                 <div class="counter-center center">
-                       <!-- <i class="ion-social-usd"></i> -->
+
                         <div class="counters">
                             <span class="count_nums">7.1</span>
                         </div>
@@ -326,7 +326,7 @@ Production of oil: 1,000,000 barrels per day,Estimated oil Reserve: 14,000 milli
             <div class="col-md-3 col-sm-6 col-xs-6">
                 <div class="counter-center center">
 
-                       <!-- <i class="ion-android-contacts"></i> -->
+
                         <div class="counters">
                             <span class="count_nums">440</span>
                         </div>
@@ -352,56 +352,43 @@ Production of oil: 1,000,000 barrels per day,Estimated oil Reserve: 14,000 milli
                         <h2 class="darkcolor bottom25"><a href="#.">Latest News</a></h2>
 <!--Facts Begin -->
 <div class="panel-group accordion" >
-              <!-- <div class="panel panel-default"> -->
+
                 <div class="panel-heading" >
                   <h4 class="panel-title">
-                    <!-- <a role="button" data-toggle="collapse" data-parent="#accordion" href="#collapseOne" aria-expanded="false" aria-controls="collapseOne" class="collapsed"> -->
+
                        Fact about Oil reserves
-                    <!-- </a> -->
+
                   </h4>
                 </div>
-                <!-- <div id="collapseOne" class="panel-collapse collapse" role="tabpanel" aria-labelledby="headingOne" aria-expanded="false" style="height: 0px;"> -->
+
                   <div class="panel-body">
 
                     <p>The Kingdom's Ghawar oil field has enough reserves to fill 4,770,897 Olympic swimming pools. Source: US Energy Information Administration.</p>
-                  <!-- <ul>
-                      <li>Lorem ipsum dolor sit amet, consectetur adipiscing elit</li>
-                      <li>Sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</li>
-                      <li>Ut enim ad minim veniam</li>
-                  </ul> -->
+
                 </div>
-                <!-- </div> -->
-              <!-- </div> -->
-              <!-- <div class="panel panel-default"> -->
-                <!-- <div class="panel-heading" role="tab" id="headingTwo"> -->
+
                   <h4 class="panel-title">
-                    <!-- <a class="collapsed" role="button" data-toggle="collapse" data-parent="#accordion" href="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo"> -->
+
                        When did the Marketreached it's peak?
-                    <!-- </a> -->
+
                   </h4>
-                <!-- </div> -->
-                <!-- <div id="collapseTwo" class="panel-collapse collapse" role="tabpanel" aria-labelledby="headingTwo" aria-expanded="false" style="height: 0px;"> -->
+
                   <div class="panel-body">
                     <p>In April 2015, the Saudi oil minister Ali Al-Naimi said that Saudi Arabia produced 12,630,000 million barrels per day in March that year, which was the highest figure based on records since the early 1980s. The previous peak was in August 2013 at 12,730,000 million barrels per day.</p>
                   </div>
-                <!-- </div> -->
-              <!-- </div> -->
-              <!-- <div class="panel panel-default"> -->
-                <!-- <div class="panel-heading" role="tab" id="headingThree"> -->
+
                   <h4 class="panel-title">
-                    <!-- <a class="collapsed" role="button" data-toggle="collapse" data-parent="#accordion" href="#collapseThree" aria-expanded="false" aria-controls="collapseThree"> -->
+
                       World largest exported !
-                    <!-- </a> -->
+
                   </h4>
-                <!-- </div> -->
-                <!-- <div id="collapseThree" class="panel-collapse collapse" role="tabpanel" aria-labelledby="headingThree" aria-expanded="false" style="height: 0px;"> -->
+
                   <div class="panel-body">
 
                <p>Naimi said that oil production in Saudi Arabia, the world’s biggest crude exporter, was “around 10 million” bpd in April.</p>
 
                   </div>
-                <!-- </div> -->
-              <!-- </div> -->
+
             </div>
 
 
@@ -410,7 +397,7 @@ Production of oil: 1,000,000 barrels per day,Estimated oil Reserve: 14,000 milli
                 </div>
             </div>
 
-						<!--FAQs End  -->
+
             <div class="col-md-6 col-sm-6 nopadding">
                 <div class="box-info">
                     <div class="image">
@@ -430,15 +417,15 @@ Production of oil: 1,000,000 barrels per day,Estimated oil Reserve: 14,000 milli
                     <div class="intro-text">
                         <span class="heading-title bottom25">Controlling Markets </span>
                         <h2 class="bottom45"><a href="#." class=" blackcolor">2030 Vision & Crude Oil.</a></h2>
-                        <p class="blackcolor">The use of oil will be reduced to the minimum and others sources will be used instead</p>
-						<p class="blackcolor">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam</p>
+                        <p class="blackcolor">The use of oil will be reduced to the minimum and others sources will be used instead.</p>
+						<p class="blackcolor">According to oilprice.com,The shift from an oil-dependent economy to a diversified one does not happen within a fortnight, so it would make sense to make the best of high oil prices while they last.(Salv,2017)</p>
                     </div>
                 </div>
             </div>
         </div>
     </div>
 </section>
-<!--blog Info ends-->
+
 
 
 
@@ -456,7 +443,7 @@ Production of oil: 1,000,000 barrels per day,Estimated oil Reserve: 14,000 milli
 </div>
 
 <!-- jQuery Files -->
-<script src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
+
 <script src="js/bootstrap.min.js"></script>
 
 
