--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
                             </div>
                             <div class="story-text equalheight">
                                 <h3>March 4, 1938</h3>
-                                <span>Contiue drilling well No.7</span>
+                                <span>Continue drilling well No.7</span>
                                 <p class="top20 bottom20">At fist there was no results , but one of the American geologists did not lose hope.
 
 As the equipment continued to drill at the famous Well No. 7 of unprecedented levels, on the morning of March 4, 1938 oil flowed from the well in commercial quantities</p>
@@ -127,7 +127,7 @@ As the equipment continued to drill at the famous Well No. 7 of unprecedented le
                             <div class="story-text equalheight">
                                 <h3>Today</h3>
                                 <span>Achivements</span>
-                                <p class="top20 bottom20">The company was able to discover 116 oil fields, in conjunction with the pumping of oil with a commercial quantity of well 7.The company dicoverd
+                                <p class="top20 bottom20">The company was able to discover 116 oil fields, in conjunction with pumping oil at commercial quantity of well 7.The company dicoverd
 Ghawar which is one of the largest oilfields in the world, along with the Safaniya field and other big oil fields in Saudi Arabia</p>
 
                             </div>
@@ -161,7 +161,7 @@ Ghawar which is one of the largest oilfields in the world, along with the Safani
                     <img alt="image" src="images/oilfield-ghawar.jpg">
                     <div class="cell">
                         <h4 class="darkcolor bottom10"><strong>Ghawar</strong> Oil Field</h4>
-                        <p class="bottom25 textred"> Started Production in 1951 and produces 5,000,000 barrels per day of oil and 2 billion cubic feet of gas per day, estimated 71,000 million barrels of oil reserved.This is the largest Conventional Oilfield in the World, is Subdivided into five Production Areas.</p>
+                        <p class="bottom25 textred"> Started Production in 1951 and produces 5,000,000 barrels per day of oil and 2 billion cubic feet of gas per day, estimated 71,000 million barrels of oil reserved.This is the largest Conventional Oilfield in the World.</p>
                         <a href="https://www.worldlistmania.com/list-of-oil-fields-in-saudi-arabia/" class="button default">Read More</a>
                     </div>
                 </div>
@@ -219,7 +219,7 @@ Production of oil: 1,000,000 barrels per day,Estimated oil Reserve: 14,000 milli
                 <div class="intro-text center bottom15">
                     <span class="heading-title bottom25">Charts & Graphs</span>
                     <h2 class="darkcolor bottom45">Crude Oil Market Analysis.</h2>
-                    <p class="bottom45 textBlack"> Saudi Arabia has high amount of oil production and reserves and the peak amount was in 2017 .</p>
+                    <p class="bottom45 textBlack"> Saudi Arabia has high amount of oil reserves and the peak amount was in 2017 .</p>
                 </div>
             </div>
             <div class="col-md-2 col-sm-1"></div>
@@ -290,7 +290,7 @@ Production of oil: 1,000,000 barrels per day,Estimated oil Reserve: 14,000 milli
                         </div>
 
                     <h6 class="text-uppercase bottom25">Billion Barrels </h6>
-                    <p>According to ARAMCO,this is the amount cude and condensate oil reserves found. </p>
+                    <p>This is the amount of cude and condensate oil reserves found,According to ARAMCO. </p>
                 </div>
             </div>
             <div class="col-md-3 col-sm-6 col-xs-6">
@@ -301,7 +301,7 @@ Production of oil: 1,000,000 barrels per day,Estimated oil Reserve: 14,000 milli
                         </div>
 
                     <h6 class="text-uppercase bottom25">Million Barrels per Day </h6>
-                    <p>Oil exported ousite the country acooding to ARAMCO. </p>
+                    <p>Oil exported outside the country accoding to ARAMCO. </p>
                 </div>
             </div>
             <div class="col-md-3 col-sm-6 col-xs-6">
@@ -350,7 +350,7 @@ Production of oil: 1,000,000 barrels per day,Estimated oil Reserve: 14,000 milli
 
                   <h3>
 
-                       When did the Marketreached it's peak?
+                       When did the Market reached it's peak?
 
                   </h3>
 
@@ -360,7 +360,7 @@ Production of oil: 1,000,000 barrels per day,Estimated oil Reserve: 14,000 milli
 
                   <h3>
 
-                      World largest exported !
+                      World largest exporter !
                   </h3>
 
                   <div class="panel-body">
@@ -398,8 +398,8 @@ Production of oil: 1,000,000 barrels per day,Estimated oil Reserve: 14,000 milli
                     <div class="intro-text">
                         <span class="heading-title bottom25">Controlling Markets </span>
                         <h2 class="bottom45"><a href="#." class=" blackcolor">2030 Vision & Crude Oil.</a></h2>
-                        <p class="blackcolor">The use of oil will be reduced to the minimum and others sources will be used instead.</p>
-						<p class="blackcolor">According to oilprice.com,The shift from an oil-dependent economy to a diversified one does not happen within a fortnight, so it would make sense to make the best of high oil prices while they last.(Salv,2017)</p>
+                        <p class="blackcolor textred">The use of oil will be reduced to the minimum and others sources will be used instead.</p>
+						<p class="blackcolor textred">According to oilprice.com,The shift from an oil-dependent economy to a diversified one does not happen within a fortnight, so it would make sense to make the best of high oil prices while they last.(Salv,2017)</p>
                     </div>
                 </div>
             </div>
