--- a/index.html
+++ b/index.html
@@ -342,7 +342,7 @@ Production of oil: 1,000,000 barrels per day,Estimated oil Reserve: 14,000 milli
             <div class="col-md-6 col-sm-6 nopadding">
                 <div class="box-info container-padding padding_half equalheight ">
                     <div class="intro-text">
-                        <span class="heading-title bottom25">Policies and Facts </span>
+                        <span class="heading-title bottom25">Facts and Quotes </span>
                         <h2 class="darkcolor bottom25"><a href="#.">Latest News</a></h2>
 <!--Facts Begin -->
 <div class="panel-group accordion textred" >
@@ -391,13 +391,13 @@ Production of oil: 1,000,000 barrels per day,Estimated oil Reserve: 14,000 milli
             </div>
 
 
-            <div class="col-md-6 col-sm-6 nopadding">
+            <!-- <div class="col-md-6 col-sm-6 nopadding">
 
                     <div class="image">
                         <img alt="image" src="images/info-box1.jpg" class="equequalheight" >
                     </div>
 
-            </div>
+            </div> -->
 
             <div class="col-md-6 col-sm-6 nopadding">
                 <div class="box-info">
@@ -409,7 +409,7 @@ Production of oil: 1,000,000 barrels per day,Estimated oil Reserve: 14,000 milli
             <div class="col-md-12 col-sm-6 nopadding">
                 <div class="box-info container-padding padding_half bgdefault equalheight wow fadeInRight">
                     <div class="intro-text">
-                        <span class="heading-title bottom25">Controlling Markets </span>
+
                         <h2 class="bottom45"><a href="#." class=" blackcolor">2030 Vision & Crude Oil.</a></h2>
                         <p class="blackcolor textred">The use of oil will be reduced to the minimum and others sources will be used instead.</p>
 						<p class="blackcolor textred">According to oilprice.com,The shift from an oil-dependent economy to a diversified one does not happen within a fortnight, so it would make sense to make the best of high oil prices while they last.<a href="https://oilprice.com/Geopolitics/International/Is-Saudi-Arabias-Post-Oil-Future-Realistic.html">(Salv,2017)</a></p>
